[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/SlimeSmall.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheets/SlimeSS.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Dead"
length = 0.32
tracks/0/type = "value"
tracks/0/path = NodePath("Slime:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.670588, 0.243137, 0.243137, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Slime:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Slime:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -107.722, -39.1726, -141.931, -15.552, -160.665, 11.3268, -161.479, 56.9391, -129.714, 118.027, 58.4374, 118.027, 8.7525, 73.2292, -0.207062, 37.391, -4.2796, 1.55267, -26.2713, -27.7695, -42.5614, -39.9871 ), PoolVector2Array( -97.9478, -39.1726, -130.528, -15.552, -150.076, 12.9558, -150.891, 57.7536, -129.714, 118.027, 58.4374, 118.027, 18.5266, 71.6002, 12.0105, 20.2863, -1.02158, -9.0359, -16.4972, -30.2131, -28.7148, -38.3581 ), PoolVector2Array( -99.5768, -50.5757, -147.633, -0.890839, -150.076, 46.3505, -114.238, 94.4064, -129.714, 118.027, 58.4374, 118.027, 37.2602, 87.0758, 17.7121, 51.2375, 5.49448, -9.0359, -31.1583, -49.7612 ), PoolVector2Array( -108.536, -56.2773, -139.488, -38.3581, -159.036, -4.96338, -159.036, 39.02, -110.165, 87.0758, -129.714, 118.027, 58.4374, 118.027, 29.1151, 77.3018, 3.86548, 39.02, -2.65057, -16.3665, -40.1179, -57.9063 ), PoolVector2Array( -119.939, -47.3177, -155.778, -22.8825, -171.253, 2.36719, -170.439, 40.649, -148.447, 71.6002, -138.673, 117.213, 58.4374, 118.027, 11.196, 73.2292, -9.98114, 28.4314, -19.7552, -17.9955, -53.15, -49.7612 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Slime:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Head/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -82, -32 ), Vector2( -67, -32 ), Vector2( -70.75, -44 ), Vector2( -82.5, -53 ), Vector2( -96.25, -41.5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Slime:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Slime:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -107.722, -39.1726, -141.931, -15.552, -160.665, 11.3268, -161.479, 56.9391, -129.714, 118.027, 58.4374, 118.027, 8.7525, 73.2292, -0.207062, 37.391, -4.2796, 1.55267, -26.2713, -27.7695, -42.5614, -39.9871 ), PoolVector2Array( -97.9478, -39.1726, -130.528, -15.552, -150.076, 12.9558, -150.891, 57.7536, -129.714, 118.027, 58.4374, 118.027, 18.5266, 71.6002, 12.0105, 20.2863, -1.02158, -9.0359, -16.4972, -30.2131, -28.7148, -38.3581 ), PoolVector2Array( -99.5768, -50.5757, -147.633, -0.890839, -150.076, 46.3505, -114.238, 94.4064, -129.714, 118.027, 58.4374, 118.027, 37.2602, 87.0758, 17.7121, 51.2375, 5.49448, -9.0359, -31.1583, -49.7612 ), PoolVector2Array( -108.536, -56.2773, -139.488, -38.3581, -159.036, -4.96338, -159.036, 39.02, -110.165, 87.0758, -129.714, 118.027, 58.4374, 118.027, 29.1151, 77.3018, 3.86548, 39.02, -2.65057, -16.3665, -40.1179, -57.9063 ), PoolVector2Array( -119.939, -47.3177, -155.778, -22.8825, -171.253, 2.36719, -170.439, 40.649, -148.447, 71.6002, -138.673, 117.213, 58.4374, 118.027, 11.196, 73.2292, -9.98114, 28.4314, -19.7552, -17.9955, -53.15, -49.7612 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Slime:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Slime:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3084.18, 348.353 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 56.0011, 13.0003 )

[node name="SmallSlime" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 1 )

[node name="Slime" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 1 )
"anims/Walk L" = SubResource( 2 )
"anims/Walk R" = SubResource( 3 )

[node name="Body" type="CollisionPolygon2D" parent="." groups=[
"enemies",
]]
visible = false
polygon = PoolVector2Array( -119.939, -47.3177, -155.778, -22.8825, -171.253, 2.36719, -170.439, 40.649, -148.447, 71.6002, -138.673, 117.213, 58.4374, 118.027, 11.196, 73.2292, -9.98114, 28.4314, -19.7552, -17.9955, -53.15, -49.7612 )

[node name="Detector" type="Area2D" parent="."]
editor/display_folded = true
visible = false
monitorable = false
collision_layer = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( -70.6384, -178.22 )
shape = SubResource( 4 )

[node name="Head" type="Area2D" parent="."]
visible = false
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( -96.25, -41.5 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
